<resources>
    <string name="app_name">Shop</string>
    <string name="dla_mezczyzn">dla mężczyzn</string>
    <string name="krem_na_noc">krem na noc</string>
    <string name="krem_na_dzien">krem na dzień</string>
    <string name="zel_do_mycia">żel do mycia</string>

    <string-array name="categories">
        <item>dla mężczyzn</item>
        <item>krem na noc</item>
        <item>krem na dzień</item>
        <item>żel do mycia</item>
    </string-array>

    <string name="category_name1">Strona Główna</string>
    <string name="category_name3">Promocje</string>
    <string name="category_name2">Ulubione</string>
    <string name="category_name4">Najpopularniejsze</string>

    <string name="product1">Jeju</string>
    <string name="product2">Miya</string>
    <string name="product3">Tołpa</string>
    <string name="product4">Vianek</string>
    <string name="product5">Soraya Plante</string>
    <string name="product6">Soraya Kombucha</string>
    <string name="product7">AA Vegan</string>
    <string name="product8">Uzdrovisko Mak</string>
    <string name="product9">Dermedic Hydrain2</string>
    <string name="product10">Bielenda Eco Nature</string>
    <string name="product11">Revox Just</string>
    <string name="product12">Jumi</string>
    <string name="product13">Teatology Matcha Tea</string>
    <string name="product14">Bielenda Blueberry C-Tox</string>
    <string name="product15">Tołpa Dermo Face Rosacal</string>
    <string name="product16">Miraculum Asta.Plankton</string>
    <string name="product17">Feel Free Odżywianie</string>
    <string name="product18">Dermika Misotherapist</string>
    <string name="product19">Laq Ekstremalnie Dziki</string>
    <string name="product20">Laq Doberman Żel</string>
    <string name="product21">Laq Doberman</string>
    <string name="product22">Laq Dzik</string>

    <string name="description5">roślinny żel myjący do twarzy, 150 ml</string>
    <string name="description4">odżywczy żel myjący do twarzy, 150 ml</string>
    <string name="description2">pielęgnujący żel do mycia i oczyszczania twarzy, 140 ml</string>
    <string name="description1">białe mydło do twarzy przeciw sebum, 75 ml</string>
    <string name="description6">naturalny żel do mycia twarzy do każdego typu cery, 150 ml</string>
    <string name="description3">żel z peelingiem i czerwoną glinką do mycia twarzy, 75 ml</string>
    <string name="description7">żel do mycia twarzy oczyszczająco-seboreguljący, 150 ml</string>
    <string name="description8">całodniowy krem do twarzy, 50 ml</string>
    <string name="description9">nawilżający krem o przedłużonym działaniu, 50 ml</string>
    <string name="description10">krem nawilżający do twarzy, 50 ml</string>
    <string name="description11">krem przeciwsłoneczny do twarzy SPF50, 30 ml</string>
    <string name="description12">wielofunkcyjny żel aloesowy 99%, 200 ml</string>
    <string name="description13">ujędrniający krem do twarzy i szyi, 50 ml</string>
    <string name="description14">nawilżająco-rozświetlający krem pianka do twarzy na dzień i na noc, 40 g</string>
    <string name="description15">regenerujący krem wzmacniający, noc, 40 ml</string>
    <string name="description16">krem-maska do twarzy, 50 ml</string>
    <string name="description17">naturalny krem do twarzy na noc, 50 ml</string>
    <string name="description18">krem naprawczy do twarzy na noc, 50 ml</string>
    <string name="description19">żel pod prysznic z ekstraktem z dębu, 500 ml</string>
    <string name="description20">mydło w kostce dla mężczyzn, 85 ml</string>
    <string name="description21">żel pod prysznic, 500 ml</string>
    <string name="description22">mydło w kostce dla mężczyzn, 85 ml</string>


    <string name="prize5">19,99zł</string>
    <string name="prize4">22,99zł</string>
    <string name="prize2">28,99zł</string>
    <string name="prize1">8,99zł</string>
    <string name="prize6">15,99zł</string>
    <string name="prize3">9,99zł</string>
    <string name="prize7">15,99zł</string>
    <string name="prize8">50,99zł</string>
    <string name="prize9">39,99zł</string>
    <string name="prize10">20,99zł</string>
    <string name="prize11">29,99zł</string>
    <string name="prize12">24,99zł</string>
    <string name="prize13">135,99zł</string>
    <string name="prize14">15,99zł</string>
    <string name="prize15">38,99zł</string>
    <string name="prize16">28,99zł</string>
    <string name="prize17">34,99zł</string>
    <string name="prize18">99,99zł</string>
    <string name="prize19">21,99zł</string>
    <string name="prize20">12,99</string>
    <string name="prize21">21,99</string>
    <string name="prize22">12,99</string>

    <string name="capacity5">150ml</string>
    <string name="capacity4">150ml</string>
    <string name="capacity2">140ml</string>
    <string name="capacity1">75ml</string>
    <string name="capacity6">140ml</string>
    <string name="capacity3">150ml</string>
    <string name="capacity7">75ml</string>
    <string name="capacity8">50ml</string>
    <string name="capacity9">50ml</string>
    <string name="capacity10">50ml</string>
    <string name="capacity11">30ml</string>
    <string name="capacity12">200ml</string>
    <string name="capacity13">50ml</string>
    <string name="capacity14">40ml</string>
    <string name="capacity15">40ml</string>
    <string name="capacity16">50ml</string>
    <string name="capacity17">50ml</string>
    <string name="capacity18">50ml</string>
    <string name="capacity19">500ml</string>
    <string name="capacity20">85ml</string>
    <string name="capacity21">500ml</string>
    <string name="capacity22">85ml</string>

    <string name="color1">#FFEEE3</string>
    <string name="color2">#DEACBA</string>
    <string name="color3">#8EC7FA</string>
    <string name="color4">#E0CAB6</string>
    <string name="color5">#D5749A</string>
    <string name="color6">#6ACC8A</string>
    <string name="color7">#2BA8DC</string>
    <string name="color8">#D4BFB9</string>
    <string name="color9">#504287</string>
    <string name="color10">#F9A76E</string>
    <string name="color11">#CD9D6C</string>
    <string name="color12">#DEC372</string>
    <string name="color13">#9BC37C</string>
    <string name="color14">#AAC9E5</string>

    <string name="details1">Roślinny żel myjący do twarzy SORAYA plante naturalnie oczyszcza skórę dzięki zawartości delikatnej substancji myjącej pochodzenia roślinnego. Zawiera wyciągi z aloesu i białej herbaty. Doskonale usuwa zanieczyszczenia, pozostawiając skórę oczyszczoną, świeżą, gotową do dalszej pielęgnacji.</string>
    <string name="details2"></string>
    <string name="details3"></string>
    <string name="details4"></string>
    <string name="details5"></string>
    <string name="details6"></string>
    <string name="details7"></string>

    <string name="ingredients1">Roślinny żel myjący do twarzy SORAYA plante naturalnie oczyszcza skórę dzięki zawartości delikatnej substancji myjącej pochodzenia roślinnego. Zawiera wyciągi z aloesu i białej herbaty. Doskonale usuwa zanieczyszczenia, pozostawiając skórę oczyszczoną, świeżą, gotową do dalszej pielęgnacji.</string>
    <string name="ingredients2">Aqua*, Coco-Glucoside*, Caprylyl/Capryl, Glucoside*, Glycerin*, Xanthan Gum*, Camellia Sinensis Leaf Extract*, Aloe Barbadensis Leaf Extract*, Citric Acid*, Tetrasodium Glutamate Diacetate*, Sodium Benzoate, Parfum.</string>
    <string name="ingredients3"></string>
    <string name="ingredients4"></string>
    <string name="ingredients5"></string>
    <string name="desc">super krem</string>
    <string name="emptyString"></string>

    <string name="disclaimer">*Składniki naturalne i pochodzenia naturalnego.</string>
</resources>